# en52-masters-robotics-ai

./: .gitignore  .gitmodules  README.md
egh432/assignment1/: question1.py  question2.py
egh432/assignment2/: orientation.py
egh432/assignment3/: questions.py
egh432/assignment4/: differential.py
egh432/assignment5/: search.py
egh432/assignment6/: planning.py
enn581/: env.sh
enn581/software_task1/: 2-1.urdf  enn583_2-1.py  viz_workspace.py
enn581/software_task2/: n11552123_ENN581_Assessment_2_2.py
enn581/software_task3/: q1.py  q2.py
enn581/software_task4/: lagrange.asv  lagrange.m  ne.py  newtoneuler.asv  newtoneuler.m  with_values.asv  with_values.m
enn581/software_task5/: q1.py  q2.py  task5.py
enn581/wk10/: prac10.asv  prac10.m  q2.py
enn581/wk11/: wk11.py
enn581/wk12/: q1_move.json  q1_pos.json  q2_edges.json  q2_vertices.json  wk12.py
enn581/wk2/: forward_kinematics_skeleton-1.py  plot_from_csv-1.py  sm-assist.py
enn581/wk3/: ikine_plot.py  ikine_sim.py
enn581/wk6/: wk6.py
enn582/n11552123_Portfolio_B/: Practical_4_Infinite Horizon Dynamic Programming.ipynb  Practical_5_Approximation in Value Space.ipynb  Practical_6_Reinforcement Learning-2.ipynb
enn582/wk1/: Practical_1_ModelPredictiveControl.mlx
enn582/wk2/: Practical_2_Deterministic Dynamic Programming.ipynb
enn582/wk3/: Practical_3_Extension.ipynb  Practical_3_Stochastic Dynamic Programming.ipynb
enn582/wk4/: Practical_4_Infinite Horizon Dynamic Programming.ipynb
enn582/wk5/: Practical_5_Approximation in Value Space.ipynb
enn582/wk5/Practical_5_Approximation in Value Space/: Practical_5_Approximation in Value Space.ipynb
enn582/wk6/: Practical_6_Reinforcement Learning-2.ipynb
enn583/Week 1/: kitti_introduction.ipynb
enn583/Week 4/: week-4.ipynb
enn583/Week 8/: week-8.ipynb
enn583/project1/: project1_vo.ipynb
enn583/project1/NielsenVO/: stereo_visual_odometry.py
enn583/project2/: README.md  associate_mugs.ipynb  demo.ipynb  gt_locations.json  n11552123_ENN583_notresults.json  test.py
enn583/project2/trajectory_1/: trajectory_1.json
enn583/project2/trajectory_2/: trajectory_2.json
enn584/wk10/: occupancy_grid_skeleton.py
enn584/wk11/: map1_path.txt  map_realistic_path.txt  map_sporadic_path.txt  sensor_fusion.py  util_funcs.py
enn584/wk6/: enn584_student_SLAM.m  eval_sol.m  load_data.m  plot_cov.m  plot_robot.m  slam_data.mat
enn584/wk7/: EKF_SLAM.py  PF_SLAM.py  particle_filter.py
enn585/: proj2.ipynb
enn586/problem-solving/: task1.asv  task1.m  task2.asv  task2.m  task3.m  task4.m
enn586/task1/: prac2.asv  task1.m
enn586/task2/: task2.asv  task2.m
thesis/: scan_notes_22-05  stereo_mapping.ipynb
thesis/A1A/: ENN595-1EngineeringLiteratureInvestigation-1.docx
thesis/zed_ws/src/zed_ros2/: CMakeLists.txt  package.xml
thesis/zed_ws/src/zed_ros2/include/zed_ros2/: zed_stream.hpp
thesis/zed_ws/src/zed_ros2/include/zed_ros2/zed_lib/: calibration.hpp  sensorcapture.hpp  stereo.hpp  stopwatch.hpp  videocapture.hpp
thesis/zed_ws/src/zed_ros2/src/: main.cpp  zed_stream.cpp
thesis/zed_ws/src/zed_ros2/src/zed_lib/: sensorcapture.cpp  videocapture.cpp
(+43 files in other folders)
