<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cmstroud.98@gmail.com">castrou</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libhidapi-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
